viz: Use GL_BGRA_EXT internalformat for GpuDisplayProvider

One last spot where we need to adjust the internalformat to match the
new default buffer format on Ozone.

Bug: 829943
Test: Boot to login, verify screen not black
Change-Id: Id45eac8cbd029dfbaea03d46effe5efb1fc7dc55
Reviewed-on: https://chromium-review.googlesource.com/1000406
Commit-Queue: Kristian H. Kristensen <hoegsberg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550247}
Former-commit-id: 25be9395356503624b4b7888647155666fd58cbd