components/viz/service/display_embedder/gpu_display_provider.cc
@@ -130,7 +130,7 @@ std::unique_ptr<Display> GpuDisplayProvider::CreateDisplay(
       output_surface = std::make_unique<GLOutputSurfaceOzone>(
           std::move(context_provider), surface_handle,
           synthetic_begin_frame_source.get(), gpu_memory_buffer_manager_.get(),
-          GL_TEXTURE_2D, GL_RGB);
+          GL_TEXTURE_2D, GL_BGRA_EXT);
 #elif defined(OS_MACOSX)
       output_surface = std::make_unique<GLOutputSurfaceMac>(
           std::move(context_provider), surface_handle,
